--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,13 +27,13 @@
     
       <!-- Right-aligned links -->
       <div class="topnav-right">
-        <%= link_to "Help", static_pages_help_path %>
+        <%= link_to "Help", help_path %>
       </div>
     
     </div>
     <ul class="nav">
         <%= link_to "Home", root_path, class: "pure-material-button-contained" %>
-        <%= link_to "Map", static_pages_map_path, class: "pure-material-button-contained" %>
-        <%= link_to "Data", static_pages_data_path, class: "pure-material-button-contained" %>
+        <%= link_to "Map", map_path, class: "pure-material-button-contained" %>
+        <%= link_to "Data", data_path, class: "pure-material-button-contained" %>
     </ul>
 </header>
