--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,7 @@
   <body>
     <%= render 'layouts/header' %>
       <%= yield %>
+      
+      <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
