--- a/app/views/static_pages/map.html.erb
+++ b/app/views/static_pages/map.html.erb
@@ -6,44 +6,44 @@
     var slider;
     var output;
   $(document).on('turbolinks:load', function() {
-        initMap(<%=@location_set.map{|l| l.lat}%>, <%=@location_set.map{|l| l.long}%>)
+        initMap(<%=@location_set.map{|l| l.lat}%>, <%=@location_set.map{|l| l.long}%>, <%=raw @location_set.map{|l| l.name}%>)
         addMarker(<%=@permit_set.map{|l| l.lat}%>, 
         <%=@permit_set.map{|l| l.long}%>, 
         <%=@permit_set.map{|l| l.value}%>)
-        value_range = document.getElementById("value_range");
-        year_range = document.getElementById("year_range");
-        lower_year_label = document.getElementById("lower_year_label");
-        lower_year_label.innerHTML = year_range.value; // Display the default slider value
-        lower_value_label = document.getElementById("lower_value_label");
-        lower_value_label.innerHTML = value_range.value; // Display the default slider value
-        value_range.onchange = function() {
-          lower_value_label.innerHTML = this.value;
-          document.getElementById('submit_form').click();
-        }
-        year_range.onchange = function() {
-          lower_year_label.innerHTML = this.value;
-          document.getElementById('submit_form').click();
-        }
+        // value_range = document.getElementById("value_range");
+        // year_range = document.getElementById("year_range");
+        // lower_year_label = document.getElementById("lower_year_label");
+        // lower_year_label.innerHTML = year_range.value; // Display the default slider value
+        // lower_value_label = document.getElementById("lower_value_label");
+        // lower_value_label.innerHTML = value_range.value; // Display the default slider value
+        // value_range.onchange = function() {
+        //   lower_value_label.innerHTML = this.value;
+        //   document.getElementById('submit_form').click();
+        // }
+        // year_range.onchange = function() {
+        //   lower_year_label.innerHTML = this.value;
+        //   document.getElementById('submit_form').click();
+        // }
     });
     
     </script>
 <% end %>
 <div id="wrapper">
   <div id="left">
-        <%= form_for :anything, url: "update", remote: true do |f| %>
+        <%= form_for :anything, url: "map" do |f| %>
               <h3>Building Permit Value</h3>
               <p>Between 0 and 150 million</p>
               <span><input name="lower_value" type="text"
-                  value="0" id="value_range">-
+                  value=<%=@start_value%> id="value_range">-
                   <input name="upper_value" type="text"
-                  value="150000000" id="value_range"></span>
+                  value=<%=@end_value%> id="value_range"></span>
                   <br />
               <h3>Year Granted</h3>
-              <p>Between 2010 and 2019 million</p>
-              <span><input name="lower_value" type="text"
-                  value="2010" id="value_range">-
-                  <input name="upper_value" type="text"
-                  value="2019" id="value_range"></span>
+              <p>Between 2010 and 2019</p>
+              <span><input name="lower_year" type="text"
+                  value=<%=@start_year%> id="value_range">-
+                  <input name="upper_year" type="text"
+                  value=<%=@end_year%> id="value_range"></span>
                   <br />
                   <br />
                   <br />
@@ -53,6 +53,8 @@
                     <input type="checkbox">
                     <span class="slider round"></span>
                   </label><h4 style="display: inline;">Heat Map</h4></span>
+
+                <%= f.submit "Update Map", class: "btn btn-primary"%>
                   
               <h3>Building Permit Value</h3>
               <p><b>Building permits</b> are granted by the region to companies that wish to invest in new buildings. </p>
@@ -65,3 +67,7 @@
     <%= render 'submap' %>
   </div>
 </div>
+
+  <%= form_for :anything, :url => "data", :html => { :id => "data_form" }  do |f| %>
+    <%= f.hidden_field :station_selection, value: "test" %>
+  <% end %>
