--- a/app/views/static_pages/map.html.erb
+++ b/app/views/static_pages/map.html.erb
@@ -10,20 +10,6 @@
         addMarker(<%=@permit_set.map{|l| l.lat}%>, 
         <%=@permit_set.map{|l| l.long}%>, 
         <%=@permit_set.map{|l| l.value}%>)
-        // value_range = document.getElementById("value_range");
-        // year_range = document.getElementById("year_range");
-        // lower_year_label = document.getElementById("lower_year_label");
-        // lower_year_label.innerHTML = year_range.value; // Display the default slider value
-        // lower_value_label = document.getElementById("lower_value_label");
-        // lower_value_label.innerHTML = value_range.value; // Display the default slider value
-        // value_range.onchange = function() {
-        //   lower_value_label.innerHTML = this.value;
-        //   document.getElementById('submit_form').click();
-        // }
-        // year_range.onchange = function() {
-        //   lower_year_label.innerHTML = this.value;
-        //   document.getElementById('submit_form').click();
-        // }
     });
     
     </script>
@@ -41,19 +27,11 @@
               <h3>Year Granted</h3>
               <p>Between 2010 and 2019</p>
               <span><input name="lower_year" type="text"
-                  value=<%=@start_year%> id="value_range">-
+                  value=<%=@start_year%> id="lower_year">-
                   <input name="upper_year" type="text"
-                  value=<%=@end_year%> id="value_range"></span>
+                  value=<%=@end_year%> id="upper_year"></span>
                   <br />
                   <br />
-                  <br />
-                  <br />
-                  <span><h4 style="display: inline;">Points</h4>                  
-                  <label class="switch">
-                    <input type="checkbox">
-                    <span class="slider round"></span>
-                  </label><h4 style="display: inline;">Heat Map</h4></span>
-
                 <%= f.submit "Update Map", class: "btn btn-primary"%>
                   
               <h3>Building Permit Value</h3>
@@ -69,5 +47,7 @@
 </div>
 
   <%= form_for :anything, :url => "data", :html => { :id => "data_form" }  do |f| %>
-    <%= f.hidden_field :station_selection, value: "test" %>
+    <%= f.hidden_field :station_selection %>
+    <%= f.hidden_field :lower_year %>
+    <%= f.hidden_field :upper_year %>
   <% end %>
