format data page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,6 @@
     <ul class="nav">
         <%= link_to "Home", root_path, class: "pure-material-button-contained" %>
         <%= link_to "Map", map_path, class: "pure-material-button-contained" %>
-        <%= link_to "Data", data_path, class: "pure-material-button-contained" %>
+        <%= link_to "Stations ", data_path, class: "pure-material-button-contained" %>
     </ul>
 </header>
