--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,5 +8,5 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #map {
-  margin-top: -100px; top: 0; left: 0; height: 100%; width: 100%; z-index:0; 
+  top: 0; left: 0; height: 100%; width: 100%; z-index:0; 
 }
